...
//  Created by Ricky Austin on 17/02/23.
//

import UIKit
// MARK: Template for Table and Collection based Controller
class BaseViewController: UIViewController {
    @IBOutlet weak var mainTable: UITableView!
    @IBOutlet weak var mainCollection: UICollectionView!
    lazy var searchControl = UISearchController()
        
    enum PageType {
        case table, collection
    }
...
        
    }
    
    /// Show alert for API errors
    /// - Parameter message: error message
    func showErrorAlert(message : String) {
        let alert = UIAlertController(title: "There's a mistake", message: message, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "close", style: .cancel))
        navigationController?.viewControllers.last?.present(alert, animated: true, completion: nil)
    }
    
    /// Show loading indicator, used when fetching API
    func showLoader() {
...
